@@ -94,7 +94,7 @@ public class WebProjectDeploy extends SvrProcess
 		//	Stage
 		MCStage[] stages = MCStage.getStages(m_project);
 		for (int i = 0; i < stages.length; i++)
-			m_map.put(new Integer(stages[i].getCM_CStage_ID()), stages[i]);
+			m_map.put(Integer.valueOf(stages[i].getCM_CStage_ID()), stages[i]);
 		
 		//	Copy Stage Tree
 		MTree treeS = new MTree (getCtx(), m_project.getAD_TreeCMS_ID(), false, get_TrxName());
@@ -106,8 +106,7 @@ public class WebProjectDeploy extends SvrProcess
 		for (int i = 0; i < containers.length; i++)
 		{
 			MContainer container = containers[i];
-			if (!m_idList.contains(new Integer(container.getCM_Container_ID())))
-			{
+			if (!m_idList.contains(Integer.valueOf(container.getCM_Container_ID()))) {
 				String name = container.getName();
 				if (container.delete(true))
 					log.fine("Deleted: " + name);
@@ -156,14 +155,14 @@ public class WebProjectDeploy extends SvrProcess
 	private void copyStage (MTreeNode node, String path)
 	{
 		org.compiere.cm.CacheHandler thisHandler = new org.compiere.cm.CacheHandler(org.compiere.cm.CacheHandler.convertJNPURLToCacheURL(getCtx().getProperty("java.naming.provider.url")), log, getCtx(), get_TrxName());
-		Integer ID = new Integer(node.getNode_ID());
+		Integer ID = Integer.valueOf(node.getNode_ID());
 		MCStage stage = m_map.get(ID);
 		//	
 		int size = node.getChildCount();
 		for (int i = 0; i < size; i++)
 		{
 			MTreeNode child = (MTreeNode)node.getChildAt(i);
-			ID = new Integer(child.getNode_ID());
+			ID = Integer.valueOf(child.getNode_ID());
 			stage = m_map.get(ID);
 			if (stage == null)
 			{
