@@ -17,6 +17,7 @@
 package org.compiere.model;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
@@ -61,30 +62,30 @@ public class CalloutInOut extends CalloutEngine
 		{
 			mTab.setValue("DateOrdered", order.getDateOrdered());
 			mTab.setValue("POReference", order.getPOReference());
-			mTab.setValue("AD_Org_ID", new Integer(order.getAD_Org_ID()));
-			mTab.setValue("AD_OrgTrx_ID", new Integer(order.getAD_OrgTrx_ID()));
-			mTab.setValue("C_Activity_ID", new Integer(order.getC_Activity_ID()));
-			mTab.setValue("C_Campaign_ID", new Integer(order.getC_Campaign_ID()));
-			mTab.setValue("C_Project_ID", new Integer(order.getC_Project_ID()));
-			mTab.setValue("User1_ID", new Integer(order.getUser1_ID()));
-			mTab.setValue("User2_ID", new Integer(order.getUser2_ID()));
-			mTab.setValue("User3_ID", new Integer(order.getUser3_ID()));
-			mTab.setValue("User4_ID", new Integer(order.getUser4_ID()));
-			mTab.setValue("M_Warehouse_ID", new Integer(order.getM_Warehouse_ID()));
+			mTab.setValue("AD_Org_ID", Integer.valueOf(order.getAD_Org_ID()));
+			mTab.setValue("AD_OrgTrx_ID", Integer.valueOf(order.getAD_OrgTrx_ID()));
+			mTab.setValue("C_Activity_ID", Integer.valueOf(order.getC_Activity_ID()));
+			mTab.setValue("C_Campaign_ID", Integer.valueOf(order.getC_Campaign_ID()));
+			mTab.setValue("C_Project_ID", Integer.valueOf(order.getC_Project_ID()));
+			mTab.setValue("User1_ID", Integer.valueOf(order.getUser1_ID()));
+			mTab.setValue("User2_ID", Integer.valueOf(order.getUser2_ID()));
+			mTab.setValue("User3_ID", Integer.valueOf(order.getUser3_ID()));
+			mTab.setValue("User4_ID", Integer.valueOf(order.getUser4_ID()));
+			mTab.setValue("M_Warehouse_ID", Integer.valueOf(order.getM_Warehouse_ID()));
 			//
 			mTab.setValue("DeliveryRule", order.getDeliveryRule());
 			mTab.setValue("DeliveryViaRule", order.getDeliveryViaRule());
-			mTab.setValue("M_Shipper_ID", new Integer(order.getM_Shipper_ID()));
+			mTab.setValue("M_Shipper_ID", Integer.valueOf(order.getM_Shipper_ID()));
 			mTab.setValue("FreightCostRule", order.getFreightCostRule());
 			mTab.setValue("FreightAmt", order.getFreightAmt());
 
-			mTab.setValue("C_BPartner_ID", new Integer(order.getC_BPartner_ID()));
+			mTab.setValue("C_BPartner_ID", Integer.valueOf(order.getC_BPartner_ID()));
 
 			//[ 1867464 ]
-			mTab.setValue("C_BPartner_Location_ID", new Integer(order.getC_BPartner_Location_ID()));
+			mTab.setValue("C_BPartner_Location_ID", Integer.valueOf(order.getC_BPartner_Location_ID()));
 			
 			if (order.getAD_User_ID() > 0)
-				mTab.setValue("AD_User_ID", new Integer(order.getAD_User_ID()));
+				mTab.setValue("AD_User_ID", Integer.valueOf(order.getAD_User_ID()));
 			else
 				mTab.setValue("AD_User_ID", null);
 		}
@@ -116,30 +117,30 @@ public class CalloutInOut extends CalloutEngine
 		{
 			mTab.setValue("DateOrdered", originalReceipt.getDateOrdered());
 			mTab.setValue("POReference", originalReceipt.getPOReference());
-			mTab.setValue("AD_Org_ID", new Integer(originalReceipt.getAD_Org_ID()));
-			mTab.setValue("AD_OrgTrx_ID", new Integer(originalReceipt.getAD_OrgTrx_ID()));
-			mTab.setValue("C_Activity_ID", new Integer(originalReceipt.getC_Activity_ID()));
-			mTab.setValue("C_Campaign_ID", new Integer(originalReceipt.getC_Campaign_ID()));
-			mTab.setValue("C_Project_ID", new Integer(originalReceipt.getC_Project_ID()));
-			mTab.setValue("User1_ID", new Integer(originalReceipt.getUser1_ID()));
-			mTab.setValue("User2_ID", new Integer(originalReceipt.getUser2_ID()));
-			mTab.setValue("User3_ID", new Integer(originalReceipt.getUser3_ID()));
-			mTab.setValue("User4_ID", new Integer(originalReceipt.getUser4_ID()));
-			mTab.setValue("M_Warehouse_ID", new Integer(originalReceipt.getM_Warehouse_ID()));
+			mTab.setValue("AD_Org_ID", Integer.valueOf(originalReceipt.getAD_Org_ID()));
+			mTab.setValue("AD_OrgTrx_ID", Integer.valueOf(originalReceipt.getAD_OrgTrx_ID()));
+			mTab.setValue("C_Activity_ID", Integer.valueOf(originalReceipt.getC_Activity_ID()));
+			mTab.setValue("C_Campaign_ID", Integer.valueOf(originalReceipt.getC_Campaign_ID()));
+			mTab.setValue("C_Project_ID", Integer.valueOf(originalReceipt.getC_Project_ID()));
+			mTab.setValue("User1_ID", Integer.valueOf(originalReceipt.getUser1_ID()));
+			mTab.setValue("User2_ID", Integer.valueOf(originalReceipt.getUser2_ID()));
+			mTab.setValue("User3_ID", Integer.valueOf(originalReceipt.getUser3_ID()));
+			mTab.setValue("User4_ID", Integer.valueOf(originalReceipt.getUser4_ID()));
+			mTab.setValue("M_Warehouse_ID", Integer.valueOf(originalReceipt.getM_Warehouse_ID()));
 			//
 			mTab.setValue("DeliveryRule", originalReceipt.getDeliveryRule());
 			mTab.setValue("DeliveryViaRule", originalReceipt.getDeliveryViaRule());
-			mTab.setValue("M_Shipper_ID", new Integer(originalReceipt.getM_Shipper_ID()));
+			mTab.setValue("M_Shipper_ID", Integer.valueOf(originalReceipt.getM_Shipper_ID()));
 			mTab.setValue("FreightCostRule", originalReceipt.getFreightCostRule());
 			mTab.setValue("FreightAmt", originalReceipt.getFreightAmt());
 
-			mTab.setValue("C_BPartner_ID", new Integer(originalReceipt.getC_BPartner_ID()));
+			mTab.setValue("C_BPartner_ID", Integer.valueOf(originalReceipt.getC_BPartner_ID()));
 
 			//[ 1867464 ]
-			mTab.setValue("C_BPartner_Location_ID", new Integer(originalReceipt.getC_BPartner_Location_ID()));
+			mTab.setValue("C_BPartner_Location_ID", Integer.valueOf(originalReceipt.getC_BPartner_Location_ID()));
 
 			if (originalReceipt.getAD_User_ID() > 0)
-				mTab.setValue("AD_User_ID", new Integer(originalReceipt.getAD_User_ID()));
+				mTab.setValue("AD_User_ID", Integer.valueOf(originalReceipt.getAD_User_ID()));
 			else
 				mTab.setValue("AD_User_ID", null);
 		}
@@ -279,13 +280,13 @@ public class CalloutInOut extends CalloutEngine
 				if (!IsSOTrx)
 				{
 					//	Location
-					Integer ii = new Integer(rs.getInt("C_BPartner_Location_ID"));
+					Integer ii = Integer.valueOf(rs.getInt("C_BPartner_Location_ID"));
 					if (rs.wasNull())
 						mTab.setValue("C_BPartner_Location_ID", null);
 					else
 						mTab.setValue("C_BPartner_Location_ID", ii);
 					//	Contact
-					ii = new Integer(rs.getInt("AD_User_ID"));
+					ii = Integer.valueOf(rs.getInt("AD_User_ID"));
 					if (rs.wasNull())
 						mTab.setValue("AD_User_ID", null);
 					else
@@ -350,12 +351,12 @@ public class CalloutInOut extends CalloutEngine
 			if (rs.next())
 			{
 				//	Org
-				Integer ii = new Integer(rs.getInt(1));
+				Integer ii = Integer.valueOf(rs.getInt(1));
 				int AD_Org_ID = Env.getContextAsInt(ctx, WindowNo, "AD_Org_ID");
 				if (AD_Org_ID != ii.intValue())
 					mTab.setValue("AD_Org_ID", ii);
 				//	Locator
-				ii = new Integer(rs.getInt(2));
+				ii = Integer.valueOf(rs.getInt(2));
 				if (rs.wasNull())
 					Env.setContext(ctx, WindowNo, 0, "M_Locator_ID", null);
 				else
@@ -399,32 +400,32 @@ public class CalloutInOut extends CalloutEngine
 		if (ol.get_ID() != 0)
 		{
 			if (ol.getC_Charge_ID() > 0 && ol.getM_Product_ID() <= 0) {
-				mTab.setValue("C_Charge_ID", new Integer(ol.getC_Charge_ID()));
+				mTab.setValue("C_Charge_ID", Integer.valueOf(ol.getC_Charge_ID()));
 			}
 			else {
-				mTab.setValue("M_Product_ID", new Integer(ol.getM_Product_ID()));
-				mTab.setValue("M_AttributeSetInstance_ID", new Integer(ol.getM_AttributeSetInstance_ID()));
+				mTab.setValue("M_Product_ID", Integer.valueOf(ol.getM_Product_ID()));
+				mTab.setValue("M_AttributeSetInstance_ID", Integer.valueOf(ol.getM_AttributeSetInstance_ID()));
 			}
 			//
-			mTab.setValue("C_UOM_ID", new Integer(ol.getC_UOM_ID()));
+			mTab.setValue("C_UOM_ID", Integer.valueOf(ol.getC_UOM_ID()));
 			BigDecimal MovementQty = ol.getQtyOrdered().subtract(ol.getQtyDelivered());
 			mTab.setValue("MovementQty", MovementQty);
 			BigDecimal QtyEntered = MovementQty;
 			if (ol.getQtyEntered().compareTo(ol.getQtyOrdered()) != 0)
 				QtyEntered = QtyEntered.multiply(ol.getQtyEntered())
-					.divide(ol.getQtyOrdered(), 12, BigDecimal.ROUND_HALF_UP);
+					.divide(ol.getQtyOrdered(), 12, RoundingMode.HALF_UP);
 			mTab.setValue("QtyEntered", QtyEntered);
 			//
-			mTab.setValue("C_Activity_ID", new Integer(ol.getC_Activity_ID()));
-			mTab.setValue("C_Campaign_ID", new Integer(ol.getC_Campaign_ID()));
-			mTab.setValue("C_Project_ID", new Integer(ol.getC_Project_ID()));
-			mTab.setValue("C_ProjectPhase_ID", new Integer(ol.getC_ProjectPhase_ID()));
-			mTab.setValue("C_ProjectTask_ID", new Integer(ol.getC_ProjectTask_ID()));
-			mTab.setValue("AD_OrgTrx_ID", new Integer(ol.getAD_OrgTrx_ID()));
-			mTab.setValue("User1_ID", new Integer(ol.getUser1_ID()));
-			mTab.setValue("User2_ID", new Integer(ol.getUser2_ID()));
-			mTab.setValue("User3_ID", new Integer(ol.getUser3_ID()));
-			mTab.setValue("User4_ID", new Integer(ol.getUser4_ID()));
+			mTab.setValue("C_Activity_ID", Integer.valueOf(ol.getC_Activity_ID()));
+			mTab.setValue("C_Campaign_ID", Integer.valueOf(ol.getC_Campaign_ID()));
+			mTab.setValue("C_Project_ID", Integer.valueOf(ol.getC_Project_ID()));
+			mTab.setValue("C_ProjectPhase_ID", Integer.valueOf(ol.getC_ProjectPhase_ID()));
+			mTab.setValue("C_ProjectTask_ID", Integer.valueOf(ol.getC_ProjectTask_ID()));
+			mTab.setValue("AD_OrgTrx_ID", Integer.valueOf(ol.getAD_OrgTrx_ID()));
+			mTab.setValue("User1_ID", Integer.valueOf(ol.getUser1_ID()));
+			mTab.setValue("User2_ID", Integer.valueOf(ol.getUser2_ID()));
+			mTab.setValue("User3_ID", Integer.valueOf(ol.getUser3_ID()));
+			mTab.setValue("User4_ID", Integer.valueOf(ol.getUser4_ID()));
 		}
 		return "";
 	}	//	orderLine
@@ -449,29 +450,29 @@ public class CalloutInOut extends CalloutEngine
 		if (rl.get_ID() != 0)
 		{
 			if (rl.getC_Charge_ID() > 0 && rl.getM_Product_ID() <= 0) {
-				mTab.setValue("C_Charge_ID", new Integer(rl.getC_Charge_ID()));
+				mTab.setValue("C_Charge_ID", Integer.valueOf(rl.getC_Charge_ID()));
 			}
 			else {
-				mTab.setValue("M_Product_ID", new Integer(rl.getM_Product_ID()));
-				mTab.setValue("M_AttributeSetInstance_ID", new Integer(rl.getM_AttributeSetInstance_ID()));
+				mTab.setValue("M_Product_ID", Integer.valueOf(rl.getM_Product_ID()));
+				mTab.setValue("M_AttributeSetInstance_ID", Integer.valueOf(rl.getM_AttributeSetInstance_ID()));
 			}
 			//
-			mTab.setValue("C_UOM_ID", new Integer(rl.getC_UOM_ID()));
+			mTab.setValue("C_UOM_ID", Integer.valueOf(rl.getC_UOM_ID()));
 			BigDecimal MovementQty = rl.getQty().subtract(rl.getQtyDelivered());
 			mTab.setValue("MovementQty", MovementQty);
 			BigDecimal QtyEntered = MovementQty;
 			mTab.setValue("QtyEntered", QtyEntered);
 			//
-			mTab.setValue("C_Activity_ID", new Integer(rl.getC_Activity_ID()));
-			mTab.setValue("C_Campaign_ID", new Integer(rl.getC_Campaign_ID()));
-			mTab.setValue("C_Project_ID", new Integer(rl.getC_Project_ID()));
-			mTab.setValue("C_ProjectPhase_ID", new Integer(rl.getC_ProjectPhase_ID()));
-			mTab.setValue("C_ProjectTask_ID", new Integer(rl.getC_ProjectTask_ID()));
-			mTab.setValue("AD_OrgTrx_ID", new Integer(rl.getAD_OrgTrx_ID()));
-			mTab.setValue("User1_ID", new Integer(rl.getUser1_ID()));
-			mTab.setValue("User2_ID", new Integer(rl.getUser2_ID()));
-			mTab.setValue("User3_ID", new Integer(rl.getUser3_ID()));
-			mTab.setValue("User4_ID", new Integer(rl.getUser4_ID()));
+			mTab.setValue("C_Activity_ID", Integer.valueOf(rl.getC_Activity_ID()));
+			mTab.setValue("C_Campaign_ID", Integer.valueOf(rl.getC_Campaign_ID()));
+			mTab.setValue("C_Project_ID", Integer.valueOf(rl.getC_Project_ID()));
+			mTab.setValue("C_ProjectPhase_ID", Integer.valueOf(rl.getC_ProjectPhase_ID()));
+			mTab.setValue("C_ProjectTask_ID", Integer.valueOf(rl.getC_ProjectTask_ID()));
+			mTab.setValue("AD_OrgTrx_ID", Integer.valueOf(rl.getAD_OrgTrx_ID()));
+			mTab.setValue("User1_ID", Integer.valueOf(rl.getUser1_ID()));
+			mTab.setValue("User2_ID", Integer.valueOf(rl.getUser2_ID()));
+			mTab.setValue("User3_ID", Integer.valueOf(rl.getUser3_ID()));
+			mTab.setValue("User4_ID", Integer.valueOf(rl.getUser4_ID()));
 		}
 		return "";
 	}	//	rmaLine
@@ -499,10 +500,10 @@ public class CalloutInOut extends CalloutEngine
 			&& Env.getContextAsInt(ctx, WindowNo, Env.TAB_INFO, "M_AttributeSetInstance_ID") != 0)
 		{
 			mTab.setValue("M_AttributeSetInstance_ID",
-				new Integer(Env.getContextAsInt(ctx, WindowNo, Env.TAB_INFO, "M_AttributeSetInstance_ID")));
+				Integer.valueOf(Env.getContextAsInt(ctx, WindowNo, Env.TAB_INFO, "M_AttributeSetInstance_ID")));
 			M_Locator_ID = Env.getContextAsInt(ctx, WindowNo, Env.TAB_INFO, "M_Locator_ID");
 			if (M_Locator_ID != 0)
-				mTab.setValue("M_Locator_ID", new Integer(M_Locator_ID));
+				mTab.setValue("M_Locator_ID", Integer.valueOf(M_Locator_ID));
 		}
 		else
 			mTab.setValue("M_AttributeSetInstance_ID", null);
@@ -516,7 +517,7 @@ public class CalloutInOut extends CalloutEngine
 
 		//	Set UOM/Locator/Qty
 		MProduct product = MProduct.get(ctx, M_Product_ID.intValue());
-		mTab.setValue("C_UOM_ID", new Integer (product.getC_UOM_ID()));
+		mTab.setValue("C_UOM_ID", Integer.valueOf(product.getC_UOM_ID()));
 		BigDecimal QtyEntered = (BigDecimal)mTab.getValue("QtyEntered");
 		mTab.setValue("MovementQty", QtyEntered);
 		if (M_Locator_ID != 0)
@@ -525,7 +526,7 @@ public class CalloutInOut extends CalloutEngine
 		{
 			MLocator loc = MLocator.get(ctx, product.getM_Locator_ID());
 			if (M_Warehouse_ID == loc.getM_Warehouse_ID())
-				mTab.setValue("M_Locator_ID", new Integer (product.getM_Locator_ID()));
+				mTab.setValue("M_Locator_ID", Integer.valueOf(product.getM_Locator_ID()));
 			else
 				log.fine("No Locator for M_Product_ID=" + M_Product_ID + " and M_Warehouse_ID=" + M_Warehouse_ID);
 		}
@@ -565,7 +566,7 @@ public class CalloutInOut extends CalloutEngine
 		{
 			int C_UOM_To_ID = ((Integer)value).intValue();
 			QtyEntered = (BigDecimal)mTab.getValue("QtyEntered");
-			BigDecimal QtyEntered1 = QtyEntered.setScale(MUOM.getPrecision(ctx, C_UOM_To_ID), BigDecimal.ROUND_HALF_UP);
+			BigDecimal QtyEntered1 = QtyEntered.setScale(MUOM.getPrecision(ctx, C_UOM_To_ID), RoundingMode.HALF_UP);
 			if (QtyEntered.compareTo(QtyEntered1) != 0)
 			{
 				log.fine("Corrected QtyEntered Scale UOM=" + C_UOM_To_ID
@@ -596,7 +597,7 @@ public class CalloutInOut extends CalloutEngine
 		{
 			int C_UOM_To_ID = Env.getContextAsInt(ctx, WindowNo, "C_UOM_ID");
 			QtyEntered = (BigDecimal)value;
-			BigDecimal QtyEntered1 = QtyEntered.setScale(MUOM.getPrecision(ctx, C_UOM_To_ID), BigDecimal.ROUND_HALF_UP);
+			BigDecimal QtyEntered1 = QtyEntered.setScale(MUOM.getPrecision(ctx, C_UOM_To_ID), RoundingMode.HALF_UP);
 			if (QtyEntered.compareTo(QtyEntered1) != 0)
 			{
 				log.fine("Corrected QtyEntered Scale UOM=" + C_UOM_To_ID
@@ -622,7 +623,7 @@ public class CalloutInOut extends CalloutEngine
 			int C_UOM_To_ID = Env.getContextAsInt(ctx, WindowNo, "C_UOM_ID");
 			MovementQty = (BigDecimal)value;
 			int precision = MProduct.get(ctx, M_Product_ID).getUOMPrecision();
-			BigDecimal MovementQty1 = MovementQty.setScale(precision, BigDecimal.ROUND_HALF_UP);
+			BigDecimal MovementQty1 = MovementQty.setScale(precision, RoundingMode.HALF_UP);
 			if (MovementQty.compareTo(MovementQty1) != 0)
 			{
 				log.fine("Corrected MovementQty "
@@ -678,7 +679,7 @@ public class CalloutInOut extends CalloutEngine
 			if (selectedM_Locator_ID != 0)
 			{
 				log.fine("Selected M_Locator_ID=" + selectedM_Locator_ID);
-				mTab.setValue("M_Locator_ID", new Integer (selectedM_Locator_ID));
+				mTab.setValue("M_Locator_ID", Integer.valueOf(selectedM_Locator_ID));
 			}
 		}
 		return "";
