@@ -67,7 +67,7 @@ public class MPeriod extends X_C_Period
 		if (C_Period_ID <= 0)
 			return null;
 		//
-		Integer key = new Integer(C_Period_ID);
+		Integer key = Integer.valueOf(C_Period_ID);
 		MPeriod retValue = (MPeriod) s_cache.get (key);
 		if (retValue != null)
 			return retValue;
@@ -177,7 +177,7 @@ public class MPeriod extends X_C_Period
 			while (rs.next())
 			{
 				MPeriod period = new MPeriod(ctx, rs, trxName);
-				Integer key = new Integer(period.getC_Period_ID());
+				Integer key = Integer.valueOf(period.getC_Period_ID());
 				s_cache.put (key, period);
 				if (period.isStandardPeriod())
 					retValue = period;
