@@ -92,6 +92,6 @@ public class MTree_NodeU2 extends X_AD_TreeNodeU2 {
      *    @param parentId
      */
     public void setParent_ID(int parentId) {
-        set_Value("Parent_ID", new Integer(parentId));
+        set_Value("Parent_ID", Integer.valueOf(parentId));
     }
 }
