@@ -129,17 +129,11 @@ public class DunningPrint extends DunningPrintAbstract {
 					errors++;
 					continue;
 				}
-				else if (to.getEMail() == null || to.getEMail().length() == 0)
-				{
-					addLog (entry.get_ID(), null, null, "@NotFound@: @EMail@ - " + to.getName());
-					errors++;
-					continue;
-				}
 			}
 			//	query
 			MQuery query = new MQuery("C_Dunning_Header_v");
 			query.addRestriction("C_DunningRunEntry_ID", MQuery.EQUAL, 
-				new Integer(entry.getC_DunningRunEntry_ID()));
+				Integer.valueOf(entry.getC_DunningRunEntry_ID()));
 
 			//	Engine
 			PrintInfo info = new PrintInfo(
