@@ -25,15 +25,15 @@ import java.util.ArrayList;
 import java.util.Properties;
 import java.util.logging.Level;
 
-import org.apache.ecs.XhtmlDocument;
-import org.apache.ecs.xhtml.a;
-import org.apache.ecs.xhtml.img;
-import org.apache.ecs.xhtml.link;
-import org.apache.ecs.xhtml.script;
-import org.apache.ecs.xhtml.table;
-import org.apache.ecs.xhtml.td;
-import org.apache.ecs.xhtml.th;
-import org.apache.ecs.xhtml.tr;
+import org.adempiere.legacy.apache.ecs.XhtmlDocument;
+import org.adempiere.legacy.apache.ecs.xhtml.a;
+import org.adempiere.legacy.apache.ecs.xhtml.img;
+import org.adempiere.legacy.apache.ecs.xhtml.link;
+import org.adempiere.legacy.apache.ecs.xhtml.script;
+import org.adempiere.legacy.apache.ecs.xhtml.table;
+import org.adempiere.legacy.apache.ecs.xhtml.td;
+import org.adempiere.legacy.apache.ecs.xhtml.th;
+import org.adempiere.legacy.apache.ecs.xhtml.tr;
 import org.compiere.model.MFactAcct;
 import org.compiere.model.MTable;
 import org.compiere.print.IHTMLExtension;
@@ -226,7 +226,7 @@ public class ExportFormatHTML extends AbstractExportFormat {
 
 							td.setStyle( style );
 							
-							Object obj = printData.getNode(new Integer(item.getAD_Column_ID()));
+							Object obj = printData.getNode(Integer.valueOf(item.getAD_Column_ID()));
 							if (!item.isDisplayed(printData))
 								obj = null;
 
