@@ -122,7 +122,7 @@ public class CRP {
 	     
  		 while(days < 32)
  		 {	
- 		 		String day = new String(new Integer (date.getDate()).toString()); 
+			String day = new String(Integer.valueOf(date.getDate()).toString());
  		 		long HoursLoad = getLoad(resource,date).longValue();
  		 		Long Hours = new Long(hours); 
  		 		
@@ -331,13 +331,13 @@ public class CRP {
 							currentweight -= (dailyCapacity*utilization)/100;
 					        summary += ((dailyCapacity*utilization)/100); 
 
-							dataset.addValue(dailyCapacity ,namepossiblecapacity, new Integer(day));
-							dataset.addValue((dailyCapacity*utilization)/100, namecapacity, new Integer(day) );
+							dataset.addValue(dailyCapacity ,namepossiblecapacity, Integer.valueOf(day));
+							dataset.addValue((dailyCapacity*utilization)/100, namecapacity, Integer.valueOf(day));
 						}
 						else {
 
-							dataset.addValue(0,namepossiblecapacity, new Integer(day) );
-							dataset.addValue(0, namecapacity, new Integer(day) );
+							dataset.addValue(0,namepossiblecapacity, Integer.valueOf(day));
+							dataset.addValue(0, namecapacity, Integer.valueOf(day));
 						}			
 						
 		 		 		break;					
@@ -349,13 +349,13 @@ public class CRP {
 							currentweight -= (dailyCapacity*utilization)/100;
 					        summary += ((dailyCapacity*utilization)/100); 
 
-							dataset.addValue(dailyCapacity ,namepossiblecapacity, new Integer(day));
-							dataset.addValue((dailyCapacity*utilization)/100, namecapacity, new Integer(day) );
+							dataset.addValue(dailyCapacity ,namepossiblecapacity, Integer.valueOf(day));
+							dataset.addValue((dailyCapacity*utilization)/100, namecapacity, Integer.valueOf(day));
 						}
 						else {
 
-							dataset.addValue(0,namepossiblecapacity, new Integer(day) );
-							dataset.addValue(0, namecapacity, new Integer(day) );
+							dataset.addValue(0,namepossiblecapacity, Integer.valueOf(day));
+							dataset.addValue(0, namecapacity, Integer.valueOf(day));
 						}			
 						
 		 		 		break;					
@@ -367,13 +367,13 @@ public class CRP {
 							currentweight -= (dailyCapacity*utilization)/100;
 					        summary += ((dailyCapacity*utilization)/100); 
 
-							dataset.addValue(dailyCapacity ,namepossiblecapacity, new Integer(day));
-							dataset.addValue((dailyCapacity*utilization)/100, namecapacity, new Integer(day) );
+							dataset.addValue(dailyCapacity ,namepossiblecapacity, Integer.valueOf(day));
+							dataset.addValue((dailyCapacity*utilization)/100, namecapacity, Integer.valueOf(day));
 						}
 						else {
 
-							dataset.addValue(0,namepossiblecapacity, new Integer(day) );
-							dataset.addValue(0, namecapacity, new Integer(day) );
+							dataset.addValue(0,namepossiblecapacity, Integer.valueOf(day));
+							dataset.addValue(0, namecapacity, Integer.valueOf(day));
 						}			
 						
 		 		 		break;					
@@ -385,13 +385,13 @@ public class CRP {
 							currentweight -= (dailyCapacity*utilization)/100;
 					        summary += ((dailyCapacity*utilization)/100); 
 
-							dataset.addValue(dailyCapacity ,namepossiblecapacity, new Integer(day));
-							dataset.addValue((dailyCapacity*utilization)/100, namecapacity, new Integer(day) );
+							dataset.addValue(dailyCapacity ,namepossiblecapacity, Integer.valueOf(day));
+							dataset.addValue((dailyCapacity*utilization)/100, namecapacity, Integer.valueOf(day));
 						}
 						else {
 
-							dataset.addValue(0,namepossiblecapacity, new Integer(day) );
-							dataset.addValue(0, namecapacity, new Integer(day) );
+							dataset.addValue(0,namepossiblecapacity, Integer.valueOf(day));
+							dataset.addValue(0, namecapacity, Integer.valueOf(day));
 						}			
 						
 		 		 		break;					
@@ -403,13 +403,13 @@ public class CRP {
 							currentweight -= (dailyCapacity*utilization)/100;
 					        summary += ((dailyCapacity*utilization)/100); 
 
-							dataset.addValue(dailyCapacity ,namepossiblecapacity, new Integer(day));
-							dataset.addValue((dailyCapacity*utilization)/100, namecapacity, new Integer(day) );
+							dataset.addValue(dailyCapacity ,namepossiblecapacity, Integer.valueOf(day));
+							dataset.addValue((dailyCapacity*utilization)/100, namecapacity, Integer.valueOf(day));
 						}
 						else {
 
-							dataset.addValue(0,namepossiblecapacity, new Integer(day) );
-							dataset.addValue(0, namecapacity, new Integer(day) );
+							dataset.addValue(0,namepossiblecapacity, Integer.valueOf(day));
+							dataset.addValue(0, namecapacity, Integer.valueOf(day));
 						}			
 						
 		 		 		break;					
@@ -421,13 +421,13 @@ public class CRP {
 							currentweight -= (dailyCapacity*utilization)/100;
 					        summary += ((dailyCapacity*utilization)/100); 
 
-							dataset.addValue(dailyCapacity ,namepossiblecapacity, new Integer(day));
-							dataset.addValue((dailyCapacity*utilization)/100, namecapacity, new Integer(day) );
+							dataset.addValue(dailyCapacity ,namepossiblecapacity, Integer.valueOf(day));
+							dataset.addValue((dailyCapacity*utilization)/100, namecapacity, Integer.valueOf(day));
 						}
 						else {
 
-							dataset.addValue(0,namepossiblecapacity, new Integer(day) );
-							dataset.addValue(0, namecapacity, new Integer(day) );
+							dataset.addValue(0,namepossiblecapacity, Integer.valueOf(day));
+							dataset.addValue(0, namecapacity, Integer.valueOf(day));
 						}			
 						
 		 		 		break;					
@@ -439,20 +439,20 @@ public class CRP {
 							currentweight -= (dailyCapacity*utilization)/100;
 					        summary += ((dailyCapacity*utilization)/100); 
 
-							dataset.addValue(dailyCapacity ,namepossiblecapacity, new Integer(day));
-							dataset.addValue((dailyCapacity*utilization)/100, namecapacity, new Integer(day) );
+							dataset.addValue(dailyCapacity ,namepossiblecapacity, Integer.valueOf(day));
+							dataset.addValue((dailyCapacity*utilization)/100, namecapacity, Integer.valueOf(day));
 						}
 						else {
 
-							dataset.addValue(0,namepossiblecapacity, new Integer(day) );
-							dataset.addValue(0, namecapacity, new Integer(day) );
+							dataset.addValue(0,namepossiblecapacity, Integer.valueOf(day));
+							dataset.addValue(0, namecapacity, Integer.valueOf(day));
 						}			
 						
 		 		 		break;					
 				}
 		
- 		 		dataset.addValue(currentweight, nameload, new Integer(day));
-				dataset.addValue(summary, namesummary, new Integer(day) );
+ 		 		dataset.addValue(currentweight, nameload, Integer.valueOf(day));
+				dataset.addValue(summary, namesummary, Integer.valueOf(day));
 
 				gc1.add(Calendar.DATE, 1);
  		 } 	 		 
