@@ -282,7 +282,7 @@ public class OrderReceiptIssue extends GenForm {
 			if (product != null && product.get_ID() != 0 && product.isStocked()) {
 				if (value == null && isSelected) {
 					attributeSetInstanceId =  key.getKey();
-					locatorId =  new Integer((String)m_issue[i][0].get(6));
+					locatorId =  Integer.valueOf((String)m_issue[i][0].get(6));
 					if (attributeSetInstanceId == 0 )
 						attributeSetInstanceId = (Integer) key.getKey();
 
@@ -441,7 +441,7 @@ public class OrderReceiptIssue extends GenForm {
 								// componentQtyReq =
 								// toDeliverQty.multiply(qtyBatchPerc); // TODO:
 								// set scale 4
-								componentQtyToDel = componentToDeliverQty.setScale(4, BigDecimal.ROUND_HALF_UP);
+								componentQtyToDel = componentToDeliverQty.setScale(4, RoundingMode.HALF_UP);
 								// issue.setValueAt(toDeliverQty.multiply(qtyBatchPerc),
 								// row, 6); // QtyRequired
 								issue.setValueAt(componentToDeliverQty, row, 8); // QtyToDelivery
@@ -452,8 +452,8 @@ public class OrderReceiptIssue extends GenForm {
 							componentToDeliverQty = qtyOpen;
 							if (componentToDeliverQty.signum() != 0) {
 								componentQtyReq = openQty.multiply(qtyBatchPerc); // scale 4
-								componentQtyToDel = componentToDeliverQty.setScale(4, BigDecimal.ROUND_HALF_UP);
-								issue.setValueAt(componentToDeliverQty.setScale(8, BigDecimal.ROUND_HALF_UP), row, 8); // QtyToDelivery
+								componentQtyToDel = componentToDeliverQty.setScale(4, RoundingMode.HALF_UP);
+								issue.setValueAt(componentToDeliverQty.setScale(8, RoundingMode.HALF_UP), row, 8); // QtyToDelivery
 								issue.setValueAt(openQty.multiply(qtyBatchPerc), row, 6); // QtyRequired
 							}
 						}
@@ -624,10 +624,8 @@ public class OrderReceiptIssue extends GenForm {
 										: "";
 								String desc = null;
 								row[3] = desc != null ? desc : "";
-								row[4] = toIssue.setScale(2,
-										BigDecimal.ROUND_HALF_UP).toString();
-								row[5] = getValueBigDecimal(issue, i, 7).setScale(
-										2, BigDecimal.ROUND_HALF_UP).toString();
+								row[4] = toIssue.setScale(2, RoundingMode.HALF_UP).toString();
+								row[5] = getValueBigDecimal(issue, i, 7).setScale(2, RoundingMode.HALF_UP).toString();
 								row[6] = getValueBigDecimal(issue, i, 9).toString();
 								table.add(row);
 							}
@@ -658,10 +656,8 @@ public class OrderReceiptIssue extends GenForm {
 							row[2] = m_uomkey != null ? m_uomkey.toString()
 									: "";
 							row[3] = desc != null ? desc : "";
-							row[4] = issueact.setScale(2,
-									BigDecimal.ROUND_HALF_UP).toString();
-							row[5] = getValueBigDecimal(issue, i, 7).setScale(
-									2, BigDecimal.ROUND_HALF_UP).toString();
+							row[4] = issueact.setScale(2, RoundingMode.HALF_UP).toString();
+							row[5] = getValueBigDecimal(issue, i, 7).setScale(2, RoundingMode.HALF_UP).toString();
 							row[6] = getValueBigDecimal(issue, i, 9).toString();
 							table.add(row);
 
