@@ -36,6 +36,7 @@ import java.util.Map;
 import java.util.Set;
 import java.util.logging.Level;
 
+import javax.swing.AbstractButton;
 import javax.swing.ButtonGroup;
 import javax.swing.JCheckBox;
 import javax.swing.JOptionPane;
@@ -44,6 +45,7 @@ import javax.swing.JScrollPane;
 import javax.swing.JToggleButton;
 import javax.swing.border.TitledBorder;
 import javax.swing.tree.DefaultMutableTreeNode;
+import javax.swing.tree.TreeNode;
 
 import org.compiere.apps.ALayout;
 import org.compiere.apps.ALayoutConstraint;
@@ -561,8 +563,8 @@ public class VProductConfigurationBOM extends CPanel
 		}
 		
 		//	Add to List & display
-		m_productList.add (new Integer(M_Product_ID));
-			m_bomLineIDList.add(new Integer(PP_Product_BOMLine_ID));
+		m_productList.add(Integer.valueOf(M_Product_ID));
+			m_bomLineIDList.add(Integer.valueOf(PP_Product_BOMLine_ID));
 		/*VNumber qty = new VNumber ("Qty", true, false, true, DisplayType.Quantity, name);
 		qty.setValue(lineQty);
 		qty.setReadWrite(selected);
@@ -610,13 +612,13 @@ public class VProductConfigurationBOM extends CPanel
 				while (it.hasNext())
 				{
 					ButtonGroup group = (ButtonGroup)it.next();
-					Enumeration en = group.getElements();
+					Enumeration<AbstractButton> en = group.getElements();
 					while (en.hasMoreElements())
 					{
 						//	We found the group
 						if (source == en.nextElement())
 						{
-							Enumeration info = group.getElements();
+							Enumeration<AbstractButton> info = group.getElements();
 							while (info.hasMoreElements())
 							{
 								Object infoObj = info.nextElement();
@@ -860,10 +862,10 @@ public class VProductConfigurationBOM extends CPanel
       //Collection<MPPProductBOMLine> col = new ArrayList<MPPProductBOMLine>();
       //Collections.addAll(col, bomLines);
 
-      m_BOMLevelToLinesMap.put(new Integer(bomLevel), (ArrayList)col);
+      m_BOMLevelToLinesMap.put(Integer.valueOf(bomLevel), (ArrayList)col);
       MPPProductBOMLine m_MPPProductBOMLine = bomLines[0];
       int PP_Product_BOM_ID = m_MPPProductBOMLine.getPP_Product_BOM_ID();
-      m_ConfigBOMIDToBOMLevelToLinesMap.put(new Integer(PP_Product_BOM_ID), m_BOMLevelToLinesMap);
+      m_ConfigBOMIDToBOMLevelToLinesMap.put(Integer.valueOf(PP_Product_BOM_ID), m_BOMLevelToLinesMap);
 
 
       return m_ConfigBOMIDToBOMLevelToLinesMap;
@@ -901,12 +903,12 @@ public class VProductConfigurationBOM extends CPanel
 		   log.fine("PP_Product_BOMLine_ID: " + PP_Product_BOMLine_ID);
 		   MPPProductBOMLine m_MPPProductBOMLine = new MPPProductBOMLine(Env.getCtx(), PP_Product_BOMLine_ID, null);
 		
-			m_BOMLevelToLinesMapFromKey = (HashMap<Integer, ArrayList<MPPProductBOMLine>>)m_ConfigBOMIDToBOMLevelToLinesMapFromSelectionList.get(new Integer(m_MPPProductBOMLine.getPP_Product_BOM_ID()));
+			m_BOMLevelToLinesMapFromKey = (HashMap<Integer, ArrayList<MPPProductBOMLine>>)m_ConfigBOMIDToBOMLevelToLinesMapFromSelectionList.get(Integer.valueOf(m_MPPProductBOMLine.getPP_Product_BOM_ID()));
 
 			if (m_BOMLevelToLinesMapFromKey == null)
 			{
 				m_BOMLevelToLinesMapFromKey = new HashMap<Integer, ArrayList<MPPProductBOMLine>>();
-				m_ConfigBOMIDToBOMLevelToLinesMapFromSelectionList.put(new Integer(m_MPPProductBOMLine.getPP_Product_BOM_ID()), m_BOMLevelToLinesMapFromKey);
+				m_ConfigBOMIDToBOMLevelToLinesMapFromSelectionList.put(Integer.valueOf(m_MPPProductBOMLine.getPP_Product_BOM_ID()), m_BOMLevelToLinesMapFromKey);
 				//ArrayList<MPPProductBOMLine> bomLines = (ArrayList<MPPProductBOMLine>)m_BOMLevelToLinesMapFromKey.get(getBomLevelBetweenPPProductBOMIDs(PP_ConfigProduct_BOM_ID, m_MPPProductBOMLine.getPP_Product_BOM_ID()));
 				ArrayList<MPPProductBOMLine> bomLines = new ArrayList<MPPProductBOMLine>();
 				bomLines.add(m_MPPProductBOMLine);
@@ -1152,7 +1154,7 @@ public class VProductConfigurationBOM extends CPanel
      log.fine("In pruneProductConfig");
      boolean retVal = false;
      DefaultMutableTreeNode rootProductConfig = this.m_RadioButtonTreeCellRenderer.root;
-        Enumeration children = rootProductConfig.breadthFirstEnumeration();
+        Enumeration<TreeNode> children = rootProductConfig.breadthFirstEnumeration();
         log.fine("About to prune");
         if (children != null) {
            while (children.hasMoreElements()) {
@@ -1177,7 +1179,7 @@ public class VProductConfigurationBOM extends CPanel
    }
 
    private int getNumNodesFromRoot(DefaultMutableTreeNode root) {
-        Enumeration children = root.breadthFirstEnumeration();
+        Enumeration<TreeNode> children = root.breadthFirstEnumeration();
         ArrayList m_ArrayList = Collections.list(children);
 
         return  m_ArrayList.size();
@@ -1191,8 +1193,7 @@ public class VProductConfigurationBOM extends CPanel
 
    boolean retValue = false;
         
-
-        Enumeration children = rootProductInstance.breadthFirstEnumeration();
+        Enumeration<TreeNode> children = rootProductInstance.breadthFirstEnumeration();
         if (children != null) {
            while (children.hasMoreElements()) {
 
@@ -1215,7 +1216,7 @@ public class VProductConfigurationBOM extends CPanel
      log.fine("root.getDepth: " + root.getDepth());
      log.fine("root.getNumNodesFromRoot: " + getNumNodesFromRoot(root));
 
-        Enumeration children = root.breadthFirstEnumeration();
+        Enumeration<TreeNode> children = root.breadthFirstEnumeration();
         if (children != null) {
            while (children.hasMoreElements()) {
 
@@ -1245,7 +1246,7 @@ public class VProductConfigurationBOM extends CPanel
      if(getNumNodesFromRoot(rootProductConfig) == (getNumNodesFromRoot(rootProductInstance))) {
 
      if(rootProductConfig.getDepth() == rootProductInstance.getDepth()) {
-        Enumeration children = rootProductConfig.breadthFirstEnumeration();
+        Enumeration<TreeNode> children = rootProductConfig.breadthFirstEnumeration();
         if (children != null) {
            while (children.hasMoreElements()) {
 
@@ -1284,7 +1285,7 @@ public class VProductConfigurationBOM extends CPanel
      if(getNumNodesFromRoot(rootProductConfig) == (getNumNodesFromRoot(rootProductInstance))) {
 
      if(rootProductConfig.getDepth() == rootProductInstance.getDepth()) {
-        Enumeration children = rootProductConfig.breadthFirstEnumeration();
+        Enumeration<TreeNode> children = rootProductConfig.breadthFirstEnumeration();
         if (children != null) {
            while (children.hasMoreElements()) {
 
@@ -1361,7 +1362,7 @@ public class VProductConfigurationBOM extends CPanel
            log.fine("In getLowestConfigurableBOMTreeNode");
 
         DefaultMutableTreeNode rootProductConfig = this.m_RadioButtonTreeCellRenderer.root;
-        Enumeration children = rootProductConfig.breadthFirstEnumeration();
+        Enumeration<TreeNode> children = rootProductConfig.breadthFirstEnumeration();
         if (children != null) {
            while (children.hasMoreElements()) {
 
