@@ -252,7 +252,7 @@ public class WAcctViewerData
 
 				ValueNamePair pp = new ValueNamePair(tableName, name);
 				cb.appendItem(pp.getName(),pp);
-				tableInfo.put (tableName, new Integer(id));
+				tableInfo.put(tableName, Integer.valueOf(id));
 				
 				if (id == AD_Table_ID)
 					select = pp;
