@@ -83,7 +83,7 @@ public class WImageEditor extends WEditor
     {
     	if (m_mImage == null || m_mImage.get_ID() == 0)
 			return null;
-		return new Integer(m_mImage.get_ID());
+		return Integer.valueOf(m_mImage.get_ID());
     }
 
     @Override
@@ -161,7 +161,7 @@ public class WImageEditor extends WEditor
 				Object oldValue = getValue();
 				Integer newValue = null;
 				if (AD_Image_ID != 0)
-					newValue = new Integer (AD_Image_ID);
+					newValue = Integer.valueOf(AD_Image_ID);
 				//
 				m_mImage = null;	//	force reload
 				setValue(newValue);	//	set explicitly
