@@ -287,8 +287,9 @@ public class InfoOrderPanel extends InfoPanel implements ValueChangeListener
 
 			//  C_BPartner_ID - restrict the search to the current BPartner
 			id = Env.getContext(Env.getCtx(), p_WindowNo, p_TabNo, "C_BPartner_ID", true);
-			if (id != null && id.length() != 0 && (new Integer(id).intValue() > 0))
-				fBPartner_ID.setValue(new Integer(id));
+			if (id != null && id.length() != 0 && (Integer.valueOf(id).intValue() > 0)) {
+				fBPartner_ID.setValue(Integer.valueOf(id));
+			}
 
 			//  The value passed in from the field
 			if (value != null && value.length() > 0)
@@ -299,9 +300,8 @@ public class InfoOrderPanel extends InfoPanel implements ValueChangeListener
 			{
 				//  C_Order_ID
 				id = Env.getContext(Env.getCtx(), p_WindowNo, p_TabNo, "C_Order_ID", true);
-				if (id != null && id.length() != 0 && (new Integer(id).intValue() > 0))
-				{
-					fieldID = new Integer(id).intValue();
+				if (id != null && id.length() != 0 && (Integer.valueOf(id).intValue() > 0)) {
+					fieldID = Integer.valueOf(id).intValue();
 
 					// Have to set boolean fields in query
 					String trxName = Trx.createTrxName();
